--- a/app/templates/tab2.html
+++ b/app/templates/tab2.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="mt-0"> <!-- Removed mt-4 to reduce gap -->
     <!-- Page title -->
     <h2>Open Contracts</h2>
     <!-- Table for displaying contracts -->
